# agent-dev-swarm

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  artifact-spec.md  bootstrap-plan.md  execution-policy.md  handoff-and-adjudication.md  implementation-records.md  orchestrator-worker-contract.md  sandbox.md  scenarios.md  task-specs.md
docs/examples/: adjudication-result-example.json  implementation-record-feature-003-run-checked-command.md  task-spec-example.yaml  worker-handoff-example.json  worker-result-example.json
docs/templates/: implementation-record.md
sandbox/fixtures/tiny-calculator/: fixture.yaml
sandbox/fixtures/tiny-calculator/project/: README.md
sandbox/fixtures/tiny-calculator/project/.swarm/: execution-policy.yaml
sandbox/fixtures/tiny-calculator/project/src/: calculator.py
scenarios/: scenario-1.yaml
specs/: 001-validate-project.yaml  002-check-command-policy.yaml  003-run-checked-command.yaml  004-load-task-spec.yaml  005-handoff-and-adjudication.yaml  006-sandbox-fixtures.yaml  007-supervised-run-scaffold.yaml  008-run-scenario.yaml
src/agent_dev_swarm/: cli.py  execution_policy.py  handoff_adjudication.py  implementation_records.py  sandbox_fixtures.py  scenarios.py  supervised_runs.py  task_specs.py  validate_project.py
tests/: test_execution_policy.py  test_handoff_adjudication.py  test_implementation_records.py  test_run_checked_command.py  test_sandbox_fixtures.py  test_scenarios.py  test_supervised_runs.py  test_task_specs.py  test_validate_project.py
(+3 files in other folders)
