[project]
name = "agent-dev-swarm"
version = "0.1.0"
description = "Minimal local orchestration framework for evidence-driven development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
swarm = "agent_dev_swarm.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]